# windvane_pi

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.circleci/: config.yml
buildwin/NSIS_Unicode/Include/: Langstrings_FINNISH.nsh  Langstrings_FRENCH.nsh  Langstrings_GERMAN.nsh  Langstrings_ITALIAN.nsh  Langstrings_NORWEGIAN.nsh  Langstrings_POLISH.nsh  Langstrings_PORTUGUESE.nsh  Langstrings_PORTUGUESEBR.nsh  Langstrings_RUSSIAN.nsh  Langstrings_SPANISH.nsh  Langstrings_SWEDISH.nsh  Langstrings_TURKISH.nsh
ci/: docker-build-flatpak.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake  PluginSetup.cmake  SimpleGTKConfig.cmake  SimpleWxConfig.cmake
cmake/in-files/: cloudsmith-upload.sh.in
debian/: control
forms/: WVPropertiesDialog.fbp  WVPropertiesDialogDef.cpp  WVPropertiesDialogDef.h
include/: WVConfig.h  WVDialFrame.h  WVEventHandler.h  WVJSON.h  WVNavObjectChanges.h  WVPropertiesDialogDef.h  WVPropertiesDialogImpl.h  WVUtils.h  WVdc.h  WVicons.h  dial.h  instrument.h  wind.h  windvane_pi.h
libs/nmea0183/: CMakeLists.txt
manual/: antora.yml  site.yml
manual/docs/: 404.html  index.html  sitemap.xml
manual/docs/windvane/0.1/: index.html
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr-FR.po  fr_FR.po  gl_ES.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  windvane_pi.pot  zh_CN.po  zh_TW.po
src/: WVDialFrame.cpp  WVEventHandler.cpp  WVJSON.cpp  WVNavObjectChanges.cpp  WVPropertiesDialogDef.cpp  WVPropertiesDialogImpl.cpp  WVUtils.cpp  WVdc.cpp  WVicons.cpp  dial.cpp  instrument.cpp  wind.cpp  windvane_pi.cpp
src/nmea0183/: lat.cpp  long.cpp  nmea0183.hpp
